--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
 		<br>
 		<div id="main">
 			<br>
+			<noscript>
+				<div role="alert" class="ic-flash-static ic-flash-error">
+					<div class="ic-flash__icon" aria-hidden="true">
+						<i class="icon-warning"></i>
+					</div>
+					<h1>You need to have JavaScript enabled in order to access this site.</h1>
+				</div>
+			</noscript>
+			<br>
 			<div id="cardTest" class="w3-card-4 w3-flat-midnight-blue">
 				<header v-html="cardTitle" class="w3-container w3-flat-amethyst"></header>
 				<div v-html="cardDesc" class="w3-container"></div>
