--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
 			</div>
 			<br>
 			<pre>
-				<div class="w3-code jsHigh notranslate">
-window.onload = function() {
+				<div class="w3-code jsHigh notranslate">window.onload = function() {
 	var interval = setInterval(function() {
 		if (Modernizr.mq('only all and (max-width: 480px)')) {
 			if (j("body").hasClass("w3-mobile") == false) {
@@ -134,8 +133,7 @@ window.onload = function() {
 			}
 		}
 	}, 250);
-}
-				</div>
+}</div>
 			</pre>
 		</div>
 		
