--- a/index.html
+++ b/index.html
@@ -120,8 +120,7 @@
 				</div>
 			</div>
 			<br>
-			<pre>
-				<div class="w3-code jsHigh notranslate">window.onload = function() {
+			<pre><div class="w3-code jsHigh notranslate">window.onload = function() {
 	var interval = setInterval(function() {
 		if (Modernizr.mq('only all and (max-width: 480px)')) {
 			if (j("body").hasClass("w3-mobile") == false) {
@@ -133,8 +132,7 @@
 			}
 		}
 	}, 250);
-}</div>
-			</pre>
+}</div></pre>
 		</div>
 		
 		<!-- Scripts -->
