--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 				<div class="w3-display-bottommiddle">Bottom Mid</div>
 			</div>
 			<br>
-			<div class="w3-row">
+			<div class="w3-row" style="margin: initial;">
 				<div class="w3-panel w3-topbar w3-bottombar w3-leftbar w3-rightbar w3-border-black w3-third w3-flat-amethyst">
 					<h3 v-html="third"></h3>
 				</div>
