--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
 			</div>
 			<br>
 			<div class="w3-row" style="margin: initial;">
-				<div class="w3-panel w3-topbar w3-bottombar w3-leftbar w3-rightbar w3-border-black w3-third w3-flat-amethyst">
+				<div class="w3-topbar w3-bottombar w3-leftbar w3-rightbar w3-border-black w3-third w3-flat-amethyst">
 					<h3 v-html="third"></h3>
 				</div>
-				<div class="w3-panel w3-topbar w3-bottombar w3-leftbar w3-rightbar w3-border-black w3-third w3-flat-amethyst">
+				<div class="w3-topbar w3-bottombar w3-leftbar w3-rightbar w3-border-black w3-third w3-flat-amethyst">
 					<h3 v-html="third"></h3>
 				</div>
-				<div class="w3-panel w3-topbar w3-bottombar w3-leftbar w3-rightbar w3-border-black w3-third w3-flat-amethyst">
+				<div class="w3-topbar w3-bottombar w3-leftbar w3-rightbar w3-border-black w3-third w3-flat-amethyst">
 					<h3 v-html="third"></h3>
 				</div>
 			</div>
