--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 		<link crossorigin="anonymous" media="all" integrity="sha512-0adxw3BoYSnJwgghezg1pKgXavzItBmAVOv7W31T3MQfzTXKl1578+7Y3ROuBNtIJob6JzFC9RZRxtSCOfP45g==" rel="icon" type="image/svg+xml" href="/styling-testing/favicons/favicon.svg"> <!-- Main Icon -->
 		
 		<!-- Libraries -->
-		<script type="text/javascript" charset="utf-8" async="" src="/styling-testing/resources/jQuery/jquery.min.js"></script>
-		<script type="text/javascript" charset="utf-8" async="" src="/styling-testing/resources/jQuery/UI/jquery-ui.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 		<script type="text/javascript" charset="utf-8" async="" src="/styling-testing/resources/VueJS/vue.js"></script>
 		<script type="text/javascript" charset="utf-8" async="" src="/styling-testing/resources/modernizr/modernizr.min.js"></script>
 	</head>
