--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
 		<link rel="dns-prefetch" href="https://www.google-analytics.com/">
 		
 		<!-- Stylesheets -->
-		<link rel="stylesheet" href="/styling-testing/libraries/w3css/css/w3.css">
-		<link rel="stylesheet" href="/styling-testing/libraries/w3css/css/w3-colors-flat.css">
+		<link href="https://www.w3schools.com/w3css/4/w3.css" rel="stylesheet" integrity="sha256-dtWUyNYkPxNLKNWtgz1S8jvvZCgqMjNF7WYByVjOFb4=" crossorigin="anonymous">
+		<link href="https://www.w3schools.com/lib/w3-colors-flat.css" rel="stylesheet" integrity="sha256-0yuP2++1OxSqfMje3DgeYCbOX/yjSmEL52ePAE3Fq0s=" crossorigin="anonymous">
 		<link rel="stylesheet" href="/styling-testing/fonts/OpenSans.css">
-		<link rel="stylesheet" href="/styling-testing/libraries/fontawesome/css/all.min.css">
-		<link rel="stylesheet" href="/styling-testing/resources/jQuery/UI/jquery-ui.min.css">
+		<link href="https://raw.githubusercontent.com/Hoidberg/styling-testing/main/libraries/fontawesome/css/all.min.css" rel="stylesheet" integrity="sha256-8i5jloGjXLkTLg0EA2YB/krMw3hJczJsrXruZJriHCk=" crossorigin="anonymous">
 		<link rel="stylesheet" href="/styling-testing/css/style.css">
 		
 		<!-- Icons -->
@@ -34,7 +33,7 @@
 		
 		<!-- Libraries -->
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-		<script type="text/javascript" charset="utf-8" async="" src="/styling-testing/resources/VueJS/vue.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js" integrity="sha256-FZ8KwMj1F6qnNgA7bhPryVm19xKduH5OVr8u7I1tAtc=" crossorigin="anonymous"></script>
 		<script type="text/javascript" charset="utf-8" async="" src="/styling-testing/resources/modernizr/modernizr.min.js"></script>
 	</head>
 	<body>
