--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<!-- Libraries -->
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js" integrity="sha256-FZ8KwMj1F6qnNgA7bhPryVm19xKduH5OVr8u7I1tAtc=" crossorigin="anonymous"></script>
-		<script type="text/javascript" charset="utf-8" async="" src="/styling-testing/resources/modernizr/modernizr.min.js"></script>
+		<script src="https://raw.githubusercontent.com/Hoidberg/styling-testing/main/resources/modernizr/modernizr.min.js" integrity="sha256-xvRsOuXcdWTdqvbMylcBqJIzs9Z+7RcCCY+s+5gOok0=" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<div id="header">
