--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 		<link rel="stylesheet" href="/styling-testing/css/style.css">
 		
 		<!-- Icons -->
-		<link crossorigin="anonymous" media="all" integrity="sha512-pzLLd+y0cUrg6/n1a67KmWv/uHfZjRb2CETGxgLYah0aKp/yXtpL7+TC1ksnN3C1mtMGRo+UGGHxYrNhMDGOmg==" rel="alternate icon" type="image/png" href="/styling-testing/favicons/favicon.png"> <!-- Alternate Icon -->
-		<link crossorigin="anonymous" media="all" integrity="sha512-0adxw3BoYSnJwgghezg1pKgXavzItBmAVOv7W31T3MQfzTXKl1578+7Y3ROuBNtIJob6JzFC9RZRxtSCOfP45g==" rel="icon" type="image/svg+xml" href="/styling-testing/favicons/favicon.svg"> <!-- Main Icon -->
+		<link rel="alternate icon" type="image/png" href="https://raw.githubusercontent.com/Hoidberg/styling-testing/main/favicons/favicon.png"> <!-- Alternate Icon -->
+		<link rel="icon" type="image/svg+xml" href="https://raw.githubusercontent.com/Hoidberg/styling-testing/main/favicons/favicon.svg"> <!-- Main Icon -->
 		
 		<!-- Libraries -->
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -131,8 +131,8 @@
 		
 		<!-- Scripts -->
 		<script type="text/javascript" src="https://www.w3schools.com/lib/w3codecolor.js"></script>
-		<script type="text/javascript" src="/styling-testing/js/script.js"></script>
-		<script type="text/javascript" src="/styling-testing/js/mobile.js"></script>
+		<script src="https://raw.githubusercontent.com/Hoidberg/styling-testing/main/js/mobile.js" integrity="sha256-Gt2ETmHwRTD4/XpFbvtwFkEZH5iK+GQ93ExnnbPJHrM=" crossorigin="anonymous"></script>
+		<script src="https://raw.githubusercontent.com/Hoidberg/styling-testing/main/js/script.js" integrity="sha256-HcLfJISMvFzzQEe024FtFnjmSmTTppNdZkow9RuU5W0=" crossorigin="anonymous"></script>
 		<script>w3CodeColor();</script>
 		<script async="">!function(e,a,t,n,c,o,s){e.GoogleAnalyticsObject=c,e[c]=e[c]||function(){(e[c].q=e[c].q||[]).push(arguments)},e[c].l=1*new Date,o=a.createElement(t),s=a.getElementsByTagName(t)[0],o.async=1,o.src=n,s.parentNode.insertBefore(o,s)}(window,document,"script","//www.google-analytics.com/analytics.js","ga"),ga("create","UA-3764464-7","auto"),ga("send","pageview");</script>
 	</body>
